<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:gravity="center"
    android:padding="25dp"
    android:background="@color/cardview_light_background"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/signup"
        />
    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:text="@string/full_name"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/full_name"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/name_hint"
        android:textColorHint="#A49E9E"
        android:background="@drawable/border"
        android:padding="10dp"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:text="@string/phone_number"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/phone"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/hint_phone"
        android:textColor="#000"
        android:textColorHint="#A49E9E"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="@string/hint_phone"
        android:hint="@string/pass_hint"
        android:textColorHint="#A49E9E"
        android:textColor="#000"
        android:background="@drawable/border"
        android:padding="10dp"
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:text="@string/confirm_password"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="@string/hint_phone"
        android:hint="@string/pass_hint"
        android:textColorHint="#A49E9E"
        android:textColor="#000"
        android:background="@drawable/border"
        android:padding="10dp"
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/registeryButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_shape"
        android:layout_marginTop="32dp" />


</LinearLayout>