<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/password_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/new_password_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="#A7A6A6"
        android:textSize="15sp" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="fill_horizontal"
        android:text="@string/new_password"
        android:textColor="#242424"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:gravity="right"
        android:hint="************"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#A49E9E"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="fill_horizontal"
        android:text="@string/confirm_password"
        android:textColor="#242424"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:gravity="right"
        android:hint="************"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#A49E9E"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="18sp" />
</LinearLayout>