<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changePassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginHorizontal="30dp"
        android:src="@drawable/chevron_right"
        android:tint="@color/black"
        tools:ignore="ContentDescription,UseAppTint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="اعادة تعين كلمه مرور؟"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/new_password_image" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="fill_horizontal"
        android:text="كلمة المرور القديمة:"
        android:textColor="#242424"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:gravity="right"
        android:hint="************"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#A49E9E"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="fill_horizontal"
        android:text="@string/new_password"
        android:textColor="#242424"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:gravity="right"
        android:hint="************"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#A49E9E"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="fill_horizontal"
        android:text="@string/confirm_password"
        android:textColor="#242424"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:gravity="right"
        android:hint="************"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#A49E9E"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape"
        android:text="@string/change"
        android:textColor="#ffffff"
        android:textSize="18sp" />
</LinearLayout>